// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders appropriately (when syncing) 1`] = `
<div
  className="repo-tools-refresh"
>
  <button
    className="repo-tools-refresh-button"
    disabled="disabled"
    onClick={[MockFunction]}
  >
    <span />
  </button>
</div>
`;

exports[`renders appropriately 1`] = `
<div
  className="repo-tools-refresh"
>
  <button
    className="repo-tools-refresh-button"
    disabled={null}
    onClick={[MockFunction]}
  >
    <span />
  </button>
</div>
`;
